--- a/package.json
+++ b/package.json
@@ -14,7 +14,11 @@
   "license": "ISC",
   "devDependencies": {
     "cypress": "^7.3.0",
+    "cypress-cucumber-preprocessor": "^4.1.0",
     "mocha": "^8.4.0",
     "mochawesome": "^6.2.2"
+  },
+  "cypress-cucumber-preprocessor": {
+    "nonGlobalStepDefinitions": true
   }
 }
